--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.cooltechworks.creditcarddesign.CardEditActivity"
+            android:name="com.hkmui.ccdesign.CardEditActivity"
             android:configChanges="keyboard|keyboardHidden"
             android:label="@string/app_name">
         </activity>
